--- a/src/components/qualifications/qualifications.css
+++ b/src/components/qualifications/qualifications.css
@@ -15,7 +15,7 @@
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
-  margin-top: 15px;
+  margin-bottom: 50px;
 }
 
 .qualifications-container .qualification .content {
